--- a/frontend/electon-client/src/App.css
+++ b/frontend/electon-client/src/App.css
@@ -1,38 +1,25 @@
-.App {
-  text-align: center;
+:root {
+  --primary-color: #003585;
+  --secondary-color: #a7f65c;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.primary-color {
+  color: var(--primary-color);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.secondary-color {
+  color: var(--secondary-color);
 }
 
-.App-link {
-  color: #61dafb;
+.primary-bg {
+  background-color: var(--primary-color);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.secondary-bg {
+  background-color: var(--secondary-color);
 }
