--- a/frontend/electon-client/src/App.css
+++ b/frontend/electon-client/src/App.css
@@ -23,3 +23,17 @@ a {
 .secondary-bg {
   background-color: var(--secondary-color);
 }
+
+.container {
+  width: 1200px;
+  margin: 0 auto;
+}
+
+.outline-white-btn {
+  padding: 13px 32px;
+  color: white;
+  border: 1px solid white;
+}
+
+.white-btn {
+}
