--- a/frontend/electon-client/src/App.css
+++ b/frontend/electon-client/src/App.css
@@ -3,6 +3,19 @@
   --secondary-color: #a7f65c;
 }
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  list-style: none;
+}
+
+body {
+  font-size: 16px;
+  font-family: "Poppins", sans-serif;
+}
+
 a {
   text-decoration: none;
   color: inherit;
@@ -35,5 +48,47 @@ a {
   border: 1px solid white;
 }
 
+.outline-white-btn {
+  padding: 13px 32px;
+  color: white;
+  border: 1px solid white;
+  border-radius: 25px;
+  cursor: pointer;
+  font-weight: 600;
+}
+
+.outline-secondary-btn {
+  padding: 13px 32px;
+  color: var(--secondary-color);
+  border: 1px solid var(--secondary-color);
+  border-radius: 25px;
+  cursor: pointer;
+  font-weight: 600;
+}
+
+.primary-btn {
+  padding: 13px 32px;
+  color: white;
+  background: var(--primary-color);
+  border-radius: 25px;
+  cursor: pointer;
+  font-weight: 600;
+}
+
+.outline-primary-btn {
+  padding: 13px 32px;
+  color: var(--primary-color);
+  border: 1px solid var(--primary-color);
+  border-radius: 25px;
+  cursor: pointer;
+  font-weight: 600;
+}
+
 .white-btn {
+  padding: 13px 32px;
+  color: var(--primary-color);
+  background: white;
+  border-radius: 25px;
+  cursor: pointer;
+  font-weight: 600;
 }
